# Audio_control

./: .gitignore  CMakeLists.txt  README.md  icon.rc  main.cpp  maintray.cpp  maintray.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/: audiocontroller.cpp  audiocontroller.h  maintray.cpp  maintray.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sessionrow.cpp  sessionrow.h
